# neural_radiance_fields

./: .gitignore  .gitmodules  Changelog.md  README.md  pyproject.toml
notebooks/: full_nerf_example.ipynb  tiny_nerf_pytorch.ipynb
tests/: test_nerf_pl.py
